--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,4 +1,8 @@
-      
+    <!--
+    dla pokazywania tylko pierwszej linijki :
+
+    http://viralpatel.net/blogs/dynamically-shortened-text-show-more-link-jquery/
+    -->
 		
 	<div id="1procent"> 
 		<h1>Przekaż nam <img src="style/images/jeden-procent.png" heigth=30 width=30/> podatku</h1>
