changing colors to GREEN + adding logo

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
 
 	<strong>Zarząd Stowarzyszenia :</strong>
 		
-        <table style="width:100%; border-spacing:0;">
+        <table style="width:60%; border-spacing:0;margin: 10px 0 20px 0;  padding: 10px 7px 10px 4px;">
           <tr><td>prezes 		</td><td>Małgorzata Maciejek</td></tr>
           <tr><td>v-ce prezes	</td><td>Bogusław Madej</td></tr>
           <tr><td>skarbnik		</td><td>Joanna Drabik</td></tr>
