--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -1,5 +1,8 @@
-	        <h1>Kontakt</h1>
-	
+<div class="centertable">
+<table><tr><td>
+
+	<h1>Kontakt</h1>
+
 		  <p>  
   			  <strong>Stowarzyszenie "Bądźmy Razem"</strong> 
 			  <br/>
@@ -28,3 +31,6 @@
 			  <br/>
 			  29 8619 0006 0060 0630 3514 0001 
 		  </p>
+
+</td></tr></table>
+</div>
