--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,47 +1,51 @@
-<h1>Sprawozdania</h1>
+<div class="centertable">
+    <table><tr><td>
 
-<h4>Podsumowanie 2016 r.</h4>
+            <h1>Sprawozdania</h1>
 
-<br/>
-Sprawozdanie merytoryczne
-<br/>
-Bilans
-<br/>
-Rachunek zysków i strat
-<br/>
-Informacje ogólne
-<br/>
-Informacje uzupełniające
-<br/>
-<br/>
+            <h4>Podsumowanie 2016 r.</h4>
 
-<h4>Podsumowanie 2015 r.</h4>
+            <br/>
+            Sprawozdanie merytoryczne
+            <br/>
+            Bilans
+            <br/>
+            Rachunek zysków i strat
+            <br/>
+            Informacje ogólne
+            <br/>
+            Informacje uzupełniające
+            <br/>
+            <br/>
 
-<br/>
-Sprawozdanie merytoryczne
-<br/>
-Bilans
-<br/>
-Rachunek zysków i strat
-<br/>
-Informacje ogólne
-<br/>
-Informacje uzupełniające
-<br/>
-<br/>
+            <h4>Podsumowanie 2015 r.</h4>
 
-<h4>Podsumowanie 2014 r.</h4>
+            <br/>
+            Sprawozdanie merytoryczne
+            <br/>
+            Bilans
+            <br/>
+            Rachunek zysków i strat
+            <br/>
+            Informacje ogólne
+            <br/>
+            Informacje uzupełniające
+            <br/>
+            <br/>
 
-<br/>
-Sprawozdanie merytoryczne
-<br/>
-Bilans
-<br/>
-Rachunek zysków i strat
-<br/>
-Informacje ogólne
-<br/>
-Informacje uzupełniające
-<br/>
-<br/>
+            <h4>Podsumowanie 2014 r.</h4>
 
+            <br/>
+            Sprawozdanie merytoryczne
+            <br/>
+            Bilans
+            <br/>
+            Rachunek zysków i strat
+            <br/>
+            Informacje ogólne
+            <br/>
+            Informacje uzupełniające
+
+
+    </td></tr></table>
+</div>
