adding aktualności ale text hider

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,24 +1,144 @@
-    <!--
-    dla pokazywania tylko pierwszej linijki :
 
-    http://viralpatel.net/blogs/dynamically-shortened-text-show-more-link-jquery/
-    -->
-		
-	<div id="1procent"> 
-		<h1>Przekaż nam <img src="style/images/jeden-procent.png" heigth=30 width=30/> podatku</h1>
-		<h5>Kwiecień 2017</h5>
-		<p>Chętnym do przekazania 1% z Pit dla naszego stowarzyszenia przypominamy numer <b>KRS 0000414760</b>.</p>
+	<div id="2017-bal">
+		<h1>Bal w Zamku Królewskim w Niepołomicach</h1>
+		<h5>7 luty 2017</h5>
+
+		<div class='comment more'>
+			W dniu 7 lutego 2017 roku zostaliśmy zaproszeni przez Burmistrza M i G Niepołomice p. Romana Ptaka
+			na bal karnawałowy dla osób niepełnosprawnych. Bal odbył się podobnie jak w poprzednich latach na
+			Zamku Królewskim w Niepołomicach.
+			<br/><br/>
+			I podobnie jak poprzednio był pyszny poczęstunek, serwowany przez restaurację mieszczącą się
+			na zamku. Grał wspaniały zespół, przy którym świetnie bawili się uczestnicy balu nie zważając na swoją
+			niepełnosprawność. Bal otworzył Przewodniczący Rady Miasta Niepołomice p. Marek Ciastoń. Zaszczyciła
+			nas również swoją obecnością Pani Anna Morton - pełnomocnik Burmistrza dla osób niepełnosprawnych.
+			<br/><br/>
+			W balu oprócz naszego stowarzyszenia byli członkowie stowarzyszenia „Dziecięce Marzenia” oraz
+			podopieczni Domów Środowiskowych z Gminy Niepołomice i Kłaja, a także podopieczni nowo powstałego
+			w ub. roku ŚDS w Staniątkach. Bal zakończył się o późnych godzinach wieczornych.
+			<br/><br/>
+			Zdjęcia z tej imprezy znajdziecie Państwo w <a href="galeria_2017.bal.html">galerii</a>.
+			<br/>
+		</div>
 	</div>
 
-	<br/>
-		  
-	<div id="nowaStrona"> 
-	  	<h1>Nowa strona</h1>
-		<h5>Kwiecień 2017</h5>
-		<p>Z powodu zawirusowania starej strony internetowej, ruszyła nowa wersja strony..</p>
+	<div id="2016-mikolaj">
+	  	<h1>Spotkanie Mikołajkowe</h1>
+		<h5>10 grudzień 2016</h5>
+
+		<div class='comment more'>
+			Dnia 10 grudnia 2016 roku w Centrum Aktywności Społecznej w Niepołomicach przy ulicy Bocheńskiej 26 odbyło
+			się spotkanie Mikołajkowe członków Stowarzyszenia &quot;Bądźmy Razem&quot;. Już po raz czwarty właściciele firmy
+			WNĘK podarowali naszym podopiecznym paczki ze słodyczami.
+			<br/><br/>
+			Jest to piękny gest z ich strony i
+			serdecznie im za to dziękujemy. Spotkanie było bardzo radosne, były wspólne rozmowy i poczęstunek.
+			Oficjalnie witaliśmy nowego członka Stowarzyszenia p. Wandę Bejnarowicz.
+			<br/><br/>
+			Zdjęcia z tej imprezy znajdziecie Państwo w <a href="galeria_2016.mikolaj.html">galerii</a>.
+			<br/>
+		</div>
 	</div>
 
-<!--
+	<div id="2016-prelekcja">
+		<h1>Prelekcja dot. alternatywnych i wspomagających metod porozumiewania się dzieci niemówiących</h1>
+		<h5>5 listopad 2016</h5>
+
+		<div class='comment more'>
+			W dniu 5 listopada br. nasze Stowarzyszenie uczestniczyło w prelekcji dotyczącej alternatywnych i
+			wspomagających metod porozumiewania się dzieci niemówiących. Wykład poprowadziła Agnieszka
+			Bochenek oraz Marta Paczka.
+			<br/><br/>
+			Podczas prelekcji przedstawiono działania, których celem jest pomoc w porozumiewaniu się osobom
+			niemówiącym lub posługującym się mową w ograniczonym stopniu. Zamiast wypowiadanych słów mogą
+			one używać znaków graficznych, gestów lub znaków przestrzenno-dotykowych (np. przedmiotów). Osoby
+			niemówiące mogą wówczas dokonywać wyborów, podejmować decyzje, pytać, opowiadać, wyrażać myśli
+			i uczucia – pokonywać bariery w porozumiewaniu się i stawać się niezależnymi.
+			<br/><br/>
+			Tematyka:<br/>
+			- Czym jest Komunikacja Alternatywna?<br/>
+			- Kto może z niej korzystać?<br/>
+			- Jakie są korzyści ze stosowania komunikacji alternatywnej dla dziecka i jego rodziny?<br/>
+			- Prezentacja filmów<br/>
+			<br/>
+
+		</div>
+	</div>
+
+	<div id="2016-sw-org-poz">
+		<h1>Święto Organizacji Pozarządowych '16</h1>
+		<h5>11 września 2016</h5>
+
+		<div class='comment more'>
+			Już po raz czwarty 11 września 2016 roku uczestniczyliśmy w Święcie Organizacji Pozarządowych
+			organizowanym prze Burmistrza Miasta i Gminy Niepołomice. Obchody rozpoczęły się przemarszem
+			organizacji pozarządowych trasą wiodącą od Gimnazjum w Niepołomicach, Szlakiem Królewskim, dalej
+			ulicą Parkową, Zamkową do Centrum Słowa i Dźwięku. Na czele marszu szła orkiestra Lira z Niepołomic
+			skocznie przygrywając, a dalej fundacje, stowarzyszenia i koła z terenu Gminy. Większość z nich ubrana
+			była w koszulki z „logami&quot; swoich organizacji i niosła banery. Nasi członkowie również.
+			<br/><br/>
+			Członkowie niepełnosprawni ubrani w koszulki z „logo&quot; stowarzyszenia „Bądźmy Razem&quot;, w większości na wózkach
+			inwalidzkich prezentowali się świetnie i robili niemałe wrażenia na oglądających.
+			Na placu koło Centrum oglądaliśmy występy różnych organizacji, jak również dyskutowaliśmy z v-ce
+			Burmistrzem M i G Niepołomice, mgr inż. Adamem Twardowskim na temat „jak pomóc i zorganizować
+			czas osobom niepełnosprawnym po 25 roku życia, aby nie musiały spędzać go w domach, z dala od ludzi.
+			Na koniec poszliśmy całą grupą na lody i pizzę.
+			<br/>
+
+		</div>
+	</div>
+
+	<div id="2016-turnus-rehab">
+		<h1>Turnus rehabilitacyjny w Międzywodziu</h1>
+		<h5>29 lipca - 12 sierpnia 2016</h5>
+
+		<div class='comment more'>
+			W dniach 29.07 – 12.08. 2016r. wzięliśmy udział w turnusie rehabilitacyjnym w ośrodku „Relaks&quot; w
+			Międzywodziu. Ośrodek położony jest na uboczu Międzywodzia, w środku lasu, około 200 m od morza -
+			zejście na plażę wyposażone jest w drewniany podjazd, dzięki czemu nasi podopieczni mogli korzystać z
+			uroków morza. Ośrodek gwarantował każdej osobie niepełnosprawnej oraz opiekunom dwa zabiegi
+			dziennie zlecane przez lekarza. Nasi podopieczni korzystali z zabiegów takich jak: masaż ręczny oraz z
+			wykorzystaniem mat masujących, aquavibron, magnetronik, okłady borowinowe, naświetlanie lampą
+			Solux, ultradźwięki, inhalacje, hydroterapia, gimnastyka indywidualna oraz aqua aerobik. Do naszej
+			dyspozycji była również sala gimnastyczna, gdzie w deszczowe dni graliśmy w siatkówkę i tenisa
+			stołowego, oraz basen kryty. Ośrodek dawał również możliwość wypożyczenia rowerów lub kijów do
+			Nordic walking.
+			<br/><br/>
+			Podczas naszego pobytu organizowano wczasowiczom liczne atrakcje m.in. wieczorek taneczny, kolację
+			grillowaną oraz różnorodne konkursy, w których braliśmy czynny udział, zdobywając pierwsze i drugie
+			miejsce w konkursie tanecznym oraz pierwsze miejsce w turnieju tenisa stołowego. Dodatkowo, co
+			wieczór mogliśmy bawić się przy muzyce w kawiarni „Kubuś&quot;, która znajdowała się na terenie ośrodka. W
+			ramach turnusu odbyliśmy również wycieczkę autokarową do jednego z największych oceanariów w
+			Europie „Ozeaneum&quot; znajdującym się w mieście Stralsund. Zwiedziliśmy także zabytkową część miasta
+			oraz zobaczyliśmy jeden z najdłuższych mostów w Europie znany pod nazwą Rügenbrücke, łączący
+			największą niemiecką wyspę Rugię z lądem.
+			<br/><br/>
+			Niestety zmienna pogoda nie pozwoliła nam na częste plażowanie i kąpiele morskie, dlatego też wolny
+			czas spędzaliśmy na długich spacerach po Międzywodziu oraz odwiedzaliśmy pobliskie miejscowości m.in.
+			Dziwnów, Kamień Pomorski, Wolin, Pustkowo, Trzęsacz, Międzyzdroje oraz Świnoujście.
+			<br/>
+		</div>
+	</div>
+
+	<div id="2016-bal">
+		<h1>Bal Karnawałowy</h1>
+		<h5>28 stycznia 2016</h5>
+
+		<div class='comment more'>
+			Dnia 28 stycznia 2016 roku zostaliśmy zaproszeni przez Burmistrza Miasta i Gminy Niepołomice Pana Romana
+			Ptaka na Bal Karnawałowy. Podobnie jak w poprzednich latach bal odbył się na Zamku Królewskim w
+			Niepołomicach. Oprócz naszego stowarzyszenia uczestniczyli w nim również członkowie stowarzyszenia
+			„Dziecięce Marzenia” oraz podopieczni Domów Środowiskowych Gminy Niepołomice i Kłaj. Był pyszny
+			poczęstunek, przygotowany przez restaurację Zamek, a grał wspaniały zespół, przy którym bawiliśmy się
+			świetnie do późnych godzin wieczornych.
+			<br/><br/>
+			Zdjęcia z tej imprezy znajdziecie Państwo w <a href="galeria_2016.bal.html">galerii</a>.
+			<br/>
+		</div>
+	</div>
+
+
+	<!--
 	<h2>Headings</h2>
         <p>These are the different heading formats:</p>
         <h1>Heading 1</h1>
