--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,48 +1,50 @@
 <div class="centertable">
     <table><tr><td>
 
-            <h1>Sprawozdania</h1>
+            <h1>Podsumowanie 2016 r.</h1>
 
-            <h4>Podsumowanie 2016 r.</h4>
-
-            Sprawozdanie merytoryczne
+            <a href="docs/2016/sprawozdanie merytoryczne 2016.pdf">Sprawozdanie merytoryczne</a>
             <br/>
-            Bilans
+            <a href="docs/2016/sprawozdanie z dzialalnosci 2016.pdf">Sprawozdanie z działalności</a>
             <br/>
-            Rachunek zysków i strat
+            <a href="docs/2016/bilans 2016.pdf">Bilans</a>
             <br/>
-            Informacje ogólne
+            <a href="docs/2016/rachunek ZiS 2016.pdf">Rachunek zysków i strat</a>
             <br/>
-            Informacje uzupełniające
+            <a href="docs/2016/inf ogolne do spr finans 2016.pdf">Informacje ogólne</a>
             <br/>
-            <br/>
-
-            <h4>Podsumowanie 2015 r.</h4>
-
-            Sprawozdanie merytoryczne
-            <br/>
-            Bilans
-            <br/>
-            Rachunek zysków i strat
-            <br/>
-            Informacje ogólne
-            <br/>
-            Informacje uzupełniające
+            <a href="docs/2016/inf uzupelniajace do bilansu 2016.pdf">Informacje uzupełniające</a>
             <br/>
             <br/>
 
-            <h4>Podsumowanie 2014 r.</h4>
+            <h1>Podsumowanie 2015 r.</h1>
 
-            Sprawozdanie merytoryczne
+            <a href="docs/2015/Sprawozdanie 2015.jpg">Sprawozdanie merytoryczne</a>
             <br/>
-            Bilans
+            <a href="docs/2015/Bilans 2015.jpg">Bilans</a>
             <br/>
-            Rachunek zysków i strat
+            <a href="docs/2015/inf uzup do bilansu 2015.jpg">Informacje uzupełniające</a>
             <br/>
-            Informacje ogólne
+            <a href="docs/2015/inf uzup 2 do bilansu 2015.jpg">Informacje uzupełniające (strona 2)</a>
             <br/>
-            Informacje uzupełniające
+            <a href="docs/2015/RZiS 2015.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <!--a href="docs/2015/">Informacje ogólne</a-->
+            <!--br/-->
+            <br/>
 
+            <h1>Podsumowanie 2014 r.</h1>
+
+            <a href="docs/2014/sprawozdanieroczne.jpg">Sprawozdanie merytoryczne</a>
+            <br/>
+            <a href="docs/2014/bilans 2014.jpg">Bilans</a>
+            <br/>
+            <a href="docs/2014/infouzupelniajace.jpg">Informacje uzupełniające</a>
+            <br/>
+            <a href="docs/2014/rachunekzyskwistrat.jpg">Rachunek zysków i strat</a>
+            <br/>
+            <!--a href="docs/2014/">Informacje ogólne</a-->
+            <!--br/-->
 
     </td></tr></table>
 </div>
