--- a/pages/regulamin.html
+++ b/pages/regulamin.html
@@ -1,3 +1,89 @@
-<h1>Regulamin Stowarzyszenia</h1>
+<div class="centertext">
 
-...
+
+    <h1>REGULAMIN STOWARZYSZENIA ZWYKŁEGO<br/>„Bądźmy Razem”</h1>
+
+    <br/><br/><strong>§1</strong><br/><br/>
+
+    <div class="lefttext">
+        Stowarzyszenie nosi nazwę: Stowarzyszenie rodzin i przyjaciół osób z rozszczepem kręgosłupa i głęboka
+        lub sprzężoną niepełnosprawnością „Bądźmy Razem’; w dalszych postanowieniach regulaminu zwane jest
+        Stowarzyszeniem.
+    </div>
+
+    <br/><br/><strong>§2</strong><br/><br/>
+
+    <div class="lefttext">
+        1. Terenem działania Stowarzyszenia jest obszar Rzeczypospolitej Polskiej.
+        <br/>
+        2. Siedzibą Stowarzyszenia jest: 32-005 Niepołomice, ul. Kościuszki 16.
+    </div>
+
+    <br/><br/><strong>§3</strong><br/><br/>
+
+    <div class="lefttext">
+        1. Przedstawicielami uprawnionymi do reprezentacji Stowarzyszenia są:
+        <br/><br/>
+        Prezes - Małgorzata Maciejek<br/>
+        V-ce prezes - Bogusław Madej<br/>
+        Sekretarz - Monika Maciejek<br/>
+        Skarbnik - Joanna Drabik<br/>
+        Członek - Artur Gawłowicz<br/>
+        <br/>
+        2. Przedstawiciel reprezentuje Stowarzyszenie na zewnątrz.
+    </div>
+
+    <br/><br/><strong>§4</strong><br/><br/>
+
+    <div class="lefttext">
+        Stowarzyszenie jest zawiązane na czas nieokreślony. Działa na podstawie niniejszego regulaminu oraz
+        przepisów ustawy z dnia 7 kwietnia 1989 r. - Prawo o stowarzyszeniach (Dz. U. z 2001r. Nr 79, poz. 855 ze zm.).
+    </div>
+
+    <br/><br/><strong>§5</strong><br/><br/>
+
+    <div class="lefttext">
+        Stowarzyszenie opiera swoją działalność na pracy społecznej członków Stowarzyszenia.
+    </div>
+
+    <br/><br/><strong>§6</strong><br/><br/>
+
+    <div class="lefttext">
+        Celem Stowarzyszenia jest działalność z zakresu:
+        <br/><br/>
+        1. udzielanie wszechstronnej pomocy osobom z rozszczepem kręgosłupa i głęboką lub sprzężoną niepełnosprawnością,<br/>
+        2. udzielanie pomocy w ochronie zdrowia i rehabilitacji chorych osób,<br/>
+        3. udzielanie pomocy psychologicznej, pedagogicznej, logopedycznej i lekarskiej chorym, ich rodzinom i przyjaciołom.<br/>
+    </div>
+
+    <br/><br/><strong>§7</strong><br/><br/>
+
+    <div class="lefttext">
+        Stowarzyszenie realizuje swoje cele poprzez:<br/>
+        1. organizowanie spotkań integracyjnych, warsztatów, szkoleń, wykładów, pikników, turnusów rehabilitacyjnych i wycieczek.<br/>
+        2. pomoc w zakupie sprzętu ortopedycznego, rehabilitacyjnego oraz w likwidowaniu barier architektonicznych,<br/>
+        3. udzielanie pomocy rzeczowej,<br/>
+        4. przekazywanie osobom niepełnosprawnym środków finansowych na leczenie ,leki, rehabilitację, hipoterapię.<br/>
+    </div>
+
+    <br/><br/><strong>§8</strong><br/><br/>
+
+    <div class="lefttext">
+        Zarząd Stowarzyszenia ustala składkę członkowską w wysokości 50 zł od rodziny osoby
+        niepełnosprawnej lub innego członka płatną do 31 marca każdego roku.
+    </div>
+
+    <br/><br/><strong>§9</strong><br/><br/>
+
+    <div class="lefttext">
+        Zobowiązuje się każdego Członka do wykonywania powierzonych mu przez Zarząd działań.
+    </div>
+
+    <br/><br/><strong>§10</strong><br/><br/>
+
+    <div class="lefttext">
+        Nieprzestrzeganie ustaleń zawartych w §8 i §9 skutkuje skreśleniem z listy członków
+        Stowarzyszenia w trybie natychmiastowym
+    </div>
+
+</div>
