--- a/pages/regulamin.html
+++ b/pages/regulamin.html
@@ -2,8 +2,9 @@
 
 
     <h1>REGULAMIN STOWARZYSZENIA ZWYKŁEGO<br/>„Bądźmy Razem”</h1>
+    <br/>
 
-    <br/><br/><strong>§1</strong><br/><br/>
+    <br/><strong>§1</strong><br/><br/>
 
     <div class="lefttext">
         Stowarzyszenie nosi nazwę: Stowarzyszenie rodzin i przyjaciół osób z rozszczepem kręgosłupa i głęboka
@@ -11,7 +12,7 @@
         Stowarzyszeniem.
     </div>
 
-    <br/><br/><strong>§2</strong><br/><br/>
+    <br/><strong>§2</strong><br/><br/>
 
     <div class="lefttext">
         1. Terenem działania Stowarzyszenia jest obszar Rzeczypospolitej Polskiej.
@@ -19,7 +20,7 @@
         2. Siedzibą Stowarzyszenia jest: 32-005 Niepołomice, ul. Kościuszki 16.
     </div>
 
-    <br/><br/><strong>§3</strong><br/><br/>
+    <br/><strong>§3</strong><br/><br/>
 
     <div class="lefttext">
         1. Przedstawicielami uprawnionymi do reprezentacji Stowarzyszenia są:
@@ -33,20 +34,20 @@
         2. Przedstawiciel reprezentuje Stowarzyszenie na zewnątrz.
     </div>
 
-    <br/><br/><strong>§4</strong><br/><br/>
+    <br/><strong>§4</strong><br/><br/>
 
     <div class="lefttext">
         Stowarzyszenie jest zawiązane na czas nieokreślony. Działa na podstawie niniejszego regulaminu oraz
         przepisów ustawy z dnia 7 kwietnia 1989 r. - Prawo o stowarzyszeniach (Dz. U. z 2001r. Nr 79, poz. 855 ze zm.).
     </div>
 
-    <br/><br/><strong>§5</strong><br/><br/>
+    <br/><strong>§5</strong><br/><br/>
 
     <div class="lefttext">
         Stowarzyszenie opiera swoją działalność na pracy społecznej członków Stowarzyszenia.
     </div>
 
-    <br/><br/><strong>§6</strong><br/><br/>
+    <br/><strong>§6</strong><br/><br/>
 
     <div class="lefttext">
         Celem Stowarzyszenia jest działalność z zakresu:
@@ -56,7 +57,7 @@
         3. udzielanie pomocy psychologicznej, pedagogicznej, logopedycznej i lekarskiej chorym, ich rodzinom i przyjaciołom.<br/>
     </div>
 
-    <br/><br/><strong>§7</strong><br/><br/>
+    <br/><strong>§7</strong><br/><br/>
 
     <div class="lefttext">
         Stowarzyszenie realizuje swoje cele poprzez:<br/>
@@ -66,20 +67,20 @@
         4. przekazywanie osobom niepełnosprawnym środków finansowych na leczenie ,leki, rehabilitację, hipoterapię.<br/>
     </div>
 
-    <br/><br/><strong>§8</strong><br/><br/>
+    <br/><strong>§8</strong><br/><br/>
 
     <div class="lefttext">
         Zarząd Stowarzyszenia ustala składkę członkowską w wysokości 50 zł od rodziny osoby
         niepełnosprawnej lub innego członka płatną do 31 marca każdego roku.
     </div>
 
-    <br/><br/><strong>§9</strong><br/><br/>
+    <br/><strong>§9</strong><br/><br/>
 
     <div class="lefttext">
         Zobowiązuje się każdego Członka do wykonywania powierzonych mu przez Zarząd działań.
     </div>
 
-    <br/><br/><strong>§10</strong><br/><br/>
+    <br/><strong>§10</strong><br/><br/>
 
     <div class="lefttext">
         Nieprzestrzeganie ustaleń zawartych w §8 i §9 skutkuje skreśleniem z listy członków
