--- a/pages/statut.html
+++ b/pages/statut.html
@@ -1,3 +1,303 @@
-<h1>Statut Stowarzyszenia</h1>
+<div class="lefttext">
 
-...
+
+    <div class="centertext">
+
+        <h1>Stowarzyszenie Rodzin i Przyjaciół Osób<br/>
+            z rozszczepem kręgosłupa i głęboką lub sprzężoną niepełnosprawnością<br/>
+            „Bądźmy Razem ”
+        </h1>
+
+        <br/><br/><strong>Rozdział I<br/>
+        Postanowienia ogólne<br/>
+        §1</strong><br/><br/>
+
+        <br/>
+
+    </div>
+
+
+    Stowarzyszenie Rodzin i Przyjaciół Osób z rozszczepem kręgosłupa i głęboką lub sprzężoną
+    niepełnosprawnością „Bądźmy Razem”
+    działa na podstawie ustawy z dnia 7 kwietnia 1989 r. – Prawo o stowarzyszeniach (tekst jedn.: Dz. U. z
+    2001 r. Nr 79, poz. 855 z późn. zm.), innych obowiązujących przepisów prawa oraz niniejszego Statutu.
+
+    <div class="centertext">
+        <br/><strong>§2</strong><br/><br/>
+    </div>
+
+    Terenem działania Stowarzyszenia jest obszar Rzeczypospolitej Polskiej.<br/>
+    Siedzibą Stowarzyszenia są Niepołomice.<br/>
+    Stowarzyszenie może prowadzić działalność poza granicami kraju.<br/>
+    Stowarzyszenie może być członkiem krajowych i zagranicznych stowarzyszeń o tym samym lub podobnym profilu działania.<br/>
+    Działalność Stowarzyszenia opiera się na pracy społecznej członków.<br/>
+    Do prowadzenia swych działań Stowarzyszenie może zatrudniać pracowników.<br/>
+    Stowarzyszenie może używać pieczęci, odznaki i barw zgodnie z obowiązującymi w tym zakresie przepisami.<br/>
+
+    <div class="centertext">
+        <br/><strong>§3</strong><br/><br/>
+    </div>
+
+    Stowarzyszenie powołane jest na czas nieokreślony.
+
+    <div class="centertext">
+        <br/><strong>Rozdział II<br/>Cele i sposoby ich realizacji<br/>§4</strong><br/><br/>
+    </div>
+
+
+    Celami Stowarzyszenia są :<br/>
+    Udzielanie wszechstronnej pomocy osobom z rozszczepem kręgosłupa i głęboką lub sprzężoną niepełnosprawnością,<br/>
+    Udzielanie pomocy w ochronie zdrowia i rehabilitacji chorych osób,<br/>
+    Udzielanie pomocy psychologicznej, pedagogicznej, logopedycznej i lekarskiej osobom chorym, ich rodzinom i przyjaciołom.<br/>
+
+
+    <div class="centertext">
+        <br/><strong>§5</strong><br/><br/>
+    </div>
+
+    Stowarzyszenie realizuje swoje cele poprzez prowadzenie nieodpłatnej działalności pożytku publicznego w zakresie:<br/>
+    - przekazywanie niepełnosprawnym osobom fizycznym środków finansowych, w szczególności na leczenie, rehabilitację, hipoterapię, leki,<br/>
+    - udzielanie pomocy rzeczowej,<br/>
+    - pomoc w zakupie wszelkiego sprzętu ortopedycznego, rehabilitacyjnego,<br/>
+    - spotkania integracyjne, warsztaty, szkolenia, konferencje, wykłady, pikniki,<br/>
+    - organizowanie turnusów rehabilitacyjnych,<br/>
+    - pomoc w likwidowaniu i usprawnianiu barier architektonicznych.<br/>
+
+
+    <div class="centertext">
+        <br/><strong>Rozdział III<br/>Członkowie oraz ich prawa i obowiązki<br/>§6</strong><br/><br/>
+    </div>
+
+    Członkami Stowarzyszenia mogą być osoby fizyczne i osoby prawne. Osoba prawna może być jedynie
+    członkiem wspierającym Stowarzyszenie. Stowarzyszenie posiada członków:<br/>
+    - zwyczajnych,<br/>
+    - wspierających,<br/>
+    - honorowych.<br/>
+
+    <div class="centertext">
+        <br/><strong>§7</strong><br/><br/>
+    </div>
+
+    Członkiem zwyczajnym może być pełnoletnia osoba fizyczna ( w tym również cudzoziemiec ), która
+    akceptuje postanowienia Statutu oraz założenia programowe Stowarzyszenia, chce wnieść wkład pracy
+    społecznej w urzeczywistnianie celu Stowarzyszenia oraz złoży pisemną deklarację członkowską i
+    regularnie opłaca składki członkowskie.<br/>
+    Członkiem zwyczajnym staje się po przyjęciu  uchwały przez  Zarząd Stowarzyszenia.
+    Członkiem wspierającym może zostać osoba fizyczna lub osoba prawna deklarująca pomoc finansową,
+    rzeczową lub merytoryczną w realizacji celów Stowarzyszenia. Członkiem wspierającym staje się po
+    złożeniu pisemnej deklaracji na podstawie uchwały Zarządu Stowarzyszenia podjętej nie później niż w
+    ciągu dwóch miesięcy od dnia złożenia deklaracji.
+    Członkiem honorowym Stowarzyszenia może zostać osoba fizyczna, która jest szczególnie zasłużona
+    dla rozwoju Stowarzyszenia.<br/>
+    Członkiem honorowym staje się po przyjęciu uchwały przez Walne Zebranie na wniosek Zarządu
+    Stowarzyszenia lub co najmniej 2/3 członków Stowarzyszenia.
+
+    <div class="centertext">
+        <br/><strong>§8</strong><br/><br/>
+    </div>
+
+
+    Małoletni w wieku od 16 do 18 lat, którzy mają ograniczaną zdolność do czynności prawnych, mogą
+    należeć do stowarzyszenia i korzystać z czynnego i biernego prawa wyborczego, z tym że w składzie
+    zarządu stowarzyszenia większość muszą stanowić osoby pełnej zdolności do czynności prawnych.
+
+    <div class="centertext">
+        <br/><strong>§9</strong><br/><br/>
+    </div>
+
+
+    Członkowie zwyczajni mają prawo:<br/>
+    - biernego i czynnego uczestniczenia w wyborach do władz Stowarzyszenia,<br/>
+    - korzystania z dorobku i wszelkich form działalności Stowarzyszenia,<br/>
+    - udziału w zebraniach i imprezach organizowanych przez Stowarzyszenie,<br/>
+    - zgłaszania wniosków co do działalności Stowarzyszenia<br/>
+
+    <div class="centertext">
+        <br/><strong>§10</strong><br/><br/>
+    </div>
+
+
+    Członkowie zwyczajni mają obowiązek:<br/>
+    - brania udziału w działalności Stowarzyszenia i w realizowaniu jego celu,<br/>
+    - uczestniczenia w Walnych Zebraniach,<br/>
+    - przestrzegania Statutu i uchwał władz Stowarzyszenia,<br/>
+    - regularnego opłacania składek członkowskich.<br/>
+
+
+    <div class="centertext">
+        <br/><strong>§11</strong><br/><br/>
+    </div>
+
+
+    Członkowie wspierający i honorowi nie posiadają biernego ani czynnego prawa wyborczego, mogą
+    jednak brać udział z głosem doradczym w statutowych władzach Stowarzyszenia, poza tym posiadają
+    takie prawa jak członkowie zwyczajni.<br/>
+    Członek wspierający ma obowiązek wywiązywania się z zadeklarowanych świadczeń, przestrzegania
+    statutu oraz uchwał władz Stowarzyszenia.<br/>
+    Członkowie honorowi mają obowiązek przestrzegania Statutu oraz uchwał władz Stowarzyszenia.<br/>
+    Członkowie honorowi są zwolnieni z obowiązku wnoszenia składek członkowskich.<br/>
+
+
+    <div class="centertext">
+        <br/><strong>§12</strong><br/><br/>
+    </div>
+
+
+    Członkostwo w Stowarzyszeniu ustaje na skutek:<br/>
+    - dobrowolnej rezygnacji pisemnej z przynależności do Stowarzyszenia złożonej Zarządowi Stowarzyszenia,
+    wykluczenia przez Zarząd Stowarzyszenia:<br/>
+    - z powodu nieusprawiedliwionego zalegania z opłatą składek członkowskich przez okres co najmniej 6 miesięcy,<br/>
+    - z powodu rażącego naruszenia Statutu, nieprzestrzegania uchwał władz Stowarzyszenia, prezentowania postawy moralnej niegodnej członka Stowarzyszenia lub działania na szkodę Stowarzyszenia,<br/>
+    - ze względu na brak przejawów aktywnej działalności na rzecz Stowarzyszenia,<br/>
+    - utraty praw obywatelskich na mocy prawomocnego wyroku sądu,<br/>
+    - śmierci członka lub utraty osobowości prawnej przez członka wspierającego.<br/>
+    Od uchwały Zarządu Stowarzyszenia w sprawie wykluczenia (pozbawienia członkostwa w
+    Stowarzyszeniu) przysługuje odwołanie do Walnego Zebrania w terminie 14 dni od dnia doręczenia
+    stosownej uchwały. Odwołanie jest rozpatrywane na najbliższym Walnym Zebraniu. Uchwała Walnego
+    Zebrania jest ostateczna.
+
+
+    <div class="centertext">
+        <br/><strong>Rozdział IV<br/>Władze Stowarzyszenia<br/>§13</strong><br/><br/>
+    </div>
+
+
+    Władzami Stowarzyszenia są:<br/>
+    Walne Zebranie,<br/>
+    Zarząd Stowarzyszenia,<br/>
+    Komisja Rewizyjna.<br/>
+
+
+    <div class="centertext">
+        <br/><strong>§14</strong><br/><br/>
+    </div>
+
+
+
+    Zarząd Stowarzyszenia oraz Komisja Rewizyjna wybierane są przez Walne Zebranie w głosowaniu
+    tajnym zwykłą większością głosów członków uprawnionych do głosowania obecnych na Walnym Zebraniu.
+    W razie, gdy skład Zarządu Stowarzyszenia lub Komisji Rewizyjnej ulegnie zmniejszeniu w czasie
+    trwania kadencji, uzupełnienie ich składu może nastąpić w drodze kooptacji, której dokonują pozostali
+    członkowie organu, który uległ zmniejszeniu. W trybie, o którym mowa można powołać nie więcej niż
+    połowę składu organu.
+
+
+
+    <div class="centertext">
+        <br/><strong>§15</strong><br/><br/>
+    </div>
+
+
+
+    Uchwały wszystkich władz Stowarzyszenia zapadają w głosowaniu jawnym zwykłą większością głosów w
+    obecności co najmniej połowy członków uprawnionych do głosowania.
+
+
+    <div class="centertext">
+        <br/><strong>§16</strong><br/><br/>
+    </div>
+
+
+    Kadencja Zarządu Stowarzyszenia i Komisji Rewizyjnej trwa 4 lata.
+
+
+    <div class="centertext">
+        <br/><strong>§17</strong><br/><br/>
+    </div>
+
+
+    Najwyższą władzą Stowarzyszenia jest Walne Zebranie.
+    Walne Zebranie może być zwyczajne lub nadzwyczajne.
+    Zwyczajne Walne Zebranie zwołuje Zarząd Stowarzyszenia raz w roku, jako sprawozdawcze, i co
+    cztery lata, jako sprawozdawczo-wyborcze, zawiadamiając członków o jego terminie, miejscu i
+    proponowanym porządku obrad co najmniej na 14 dni przed terminem Walnego Zebrania.
+    Nadzwyczajne Walne Zebranie zwołuje Zarząd Stowarzyszenia:<br/>
+    - z własnej inicjatywy,<br/>
+    - na żądanie Komisji Rewizyjnej,<br/>
+    - na pisemny wniosek co najmniej 1/3 ogólnej liczby członków zwyczajnych Stowarzyszenia.<br/>
+    Nadzwyczajne Walne Zebranie powinno być zwołane przed upływem 14 dni od dnia zgłoszenia
+    wniosku lub żądania i obradować nad sprawami, dla których zostało zwołane.
+    Powiadomienie o walnym zebraniu następuje za pomocą ogólnie dostępnych środków przekazu ( sms,
+    e-mail, telefonicznie, listownie) za potwierdzeniem.
+
+
+    <div class="centertext">
+        <br/><strong>§18</strong><br/><br/>
+    </div>
+
+
+
+    Do kompetencji Walnego Zebrania należy:<br/>
+    - określenie głównych kierunków działania i rozwoju Stowarzyszenia,<br/>
+    - uchwalanie zmian Statutu,<br/>
+    - wybór i odwołanie wszystkich wybieralnych władz Stowarzyszenia,<br/>
+    - udzielanie Zarządowi Stowarzyszenia absolutorium na wniosek Komisji Rewizyjnej,<br/>
+    - rozpatrywanie i zatwierdzanie sprawozdań Zarządu Stowarzyszenia  i Komisji Rewizyjnej,<br/>
+    - rozpatrywanie odwołań od uchwał Zarządu Stowarzyszenia,<br/>
+    - podejmowanie uchwał w sprawie przyjęcia członka honorowego,<br/>
+    - podjęcie decyzji o rozwiązaniu Stowarzyszenia,<br/>
+    - podejmowanie uchwał we wszystkich sprawach niezastrzeżonych do kompetencji innych władz Stowarzyszenia.<br/>
+
+
+
+    <div class="centertext">
+        <br/><strong>§19</strong><br/><br/>
+    </div>
+
+
+
+    Zarząd Stowarzyszenia jest powołany do kierowania całą działalnością Stowarzyszenia zgodnie z
+    uchwałami Walnego Zebrania oraz do reprezentowania Stowarzyszenia na zewnątrz.<br/>
+    Zarząd Stowarzyszenia składa się z  4 - 6 osób wybieranych  w głosowaniu tajnym, w tym  z prezesa,
+    wiceprezesa,  skarbnika i sekretarza. Liczbę osób wchodzących w skład Zarządu każdorazowo określa
+    Walne Zebranie.<br/>
+    Posiedzenia Zarządu Stowarzyszenia odbywają się w miarę potrzeb, nie rzadziej jednak niż raz na
+    kwartał. Posiedzenia Zarządu Stowarzyszenia zwołuje prezes.
+
+
+    <div class="centertext">
+        <br/><strong>§20</strong><br/><br/>
+    </div>
+
+
+    Do kompetencji Zarządu Stowarzyszenia należy:<br/>
+    - kierowanie bieżącą pracą Stowarzyszenia,<br/>
+    - opracowanie i uchwalanie planów działań Stowarzyszenia,<br/>
+    - realizowanie uchwał Walnego Zebrania,<br/>
+    - zarządzanie majątkiem Stowarzyszenia,<br/>
+    - planowanie i prowadzenie gospodarki finansowej,<br/>
+    - reprezentowanie Stowarzyszenia na zewnątrz i działanie w jego imieniu,<br/>
+    - zwoływanie Walnego Zebrania,<br/>
+    - ustalanie wysokości składek członkowskich,<br/>
+    - sporządzanie rocznych sprawozdań merytorycznych i finansowych z działalności Stowarzyszenia.<br/>
+
+
+    <div class="centertext">
+        <br/><strong>§21</strong><br/><br/>
+    </div>
+
+
+    Komisja Rewizyjna powołana jest do sprawowania kontroli nad działalnością Stowarzyszenia.<br/>
+    Komisja Rewizyjna składa się z 3 osób, wybranych spośród co najmniej pięciu kandydatów, w
+    głosowaniu tajnym,  w tym przewodniczącego wybieranego na pierwszym posiedzeniu Komisji Rewizyjnej.<br/>
+    Posiedzenia Komisji Rewizyjnej odbywają się w miarę potrzeb, nie rzadziej jednak niż raz w roku.<br/>
+    Posiedzenia Komisji Rewizyjnej zwołuje przewodniczący.
+
+
+    <div class="centertext">
+        <br/><strong>§22</strong><br/><br/>
+    </div>
+
+
+
+    Do kompetencji Komisji Rewizyjnej należy:<br/>
+    - kontrola całokształtu działalności Stowarzyszenia,<br/>
+    - ocena pracy Zarządu Stowarzyszenia, w tym corocznych sprawozdań i bilansu,<br/>
+    - składanie sprawozdań na Walnym Zebraniu wraz z oceną działalności Stowarzyszenia i Zarządu Stowarzyszenia,<br/>
+    - wnioskowanie do Walnego Zebrania o udzielenie absolutorium Zarządowi Stowarzyszenia,<br/>
+    - wnioskowanie o odwołanie Zarządu Stowarzyszenia lub poszczególnych członków Zarządu<br/>
+    - Stowarzyszenia w razie jego bezczynności.<br/>
+    - wnioskowanie o zwołanie Nadzwyczajnego Walnego Zebrania.<br/>
+
+
+</div>
