--- a/pages/statut.html
+++ b/pages/statut.html
@@ -300,4 +300,49 @@
     - wnioskowanie o zwołanie Nadzwyczajnego Walnego Zebrania.<br/>
 
 
+    <div class="centertext">
+        <br/><strong>Rozdział V<br/>Majątek Stowarzyszenia<br/>§23</strong><br/><br/>
+    </div>
+
+
+    Źródłami powstania majątku Stowarzyszenia są:<br/>
+    - składki członkowskie,<br/>
+    - darowizny, zapisy i spadki, środki pochodzące z ofiarności publicznej, ze sponsoringu,<br/>
+    - dotacje, subwencje, udziały, lokaty,<br/>
+    Do nabywania, zbywania i obciążania majątku Stowarzyszenia oraz zaciągania innych zobowiązań
+    wobec tego majątku upoważniony jest Zarząd Stowarzyszenia.<br/>
+    Stowarzyszenie nie może udzielać pożyczek i zabezpieczać zobowiązania majątkiem Stowarzyszenia w
+    stosunku do członków Zarządu Stowarzyszenia, Komisji Rewizyjnej, pracowników i członków
+    Stowarzyszenia ani żadnych osób trzecich.<br/>
+    Stowarzyszenie nie może przekazywać swojego majątku na rzecz swoich członków, członków organów
+    lub pracowników oraz ich osób bliskich, na zasadach innych niż w stosunku do osób trzecich, w
+    szczególności, jeżeli przekazanie to następuje bezpłatnie lub na preferencyjnych warunkach.
+    Zabronione jest wykorzystywanie majątku na rzecz członków, członków organów lub pracowników
+    oraz ich osób bliskich na zasadach innych niż w stosunku do osób trzecich, chyba, że to wykorzystanie
+    bezpośrednio wynika ze statutowego celu organizacji.<br/>
+    Zabroniony jest zakup towarów lub usług od podmiotów, w których uczestniczą członkowie
+    organizacji, członkowie jej organów lub pracownicy oraz ich osób bliskich, na zasadach innych niż w
+    stosunku do osób trzecich lub po cenach wyższych niż rynkowe.<br/>
+
+
+
+    <div class="centertext">
+        <br/><strong>§24</strong><br/><br/>
+    </div>
+
+
+
+    Dla ważności oświadczenia woli, pism i dokumentów w przedmiocie praw i obowiązków
+    majątkowych Stowarzyszenia wymagane są podpisy dwóch członków Zarządu, w tym prezesa lub wiceprezesa.<br/>
+    Dla ważności złożonych  ustnych oświadczeń woli w kwestiach majątkowych, wymagane jest ich pisemne
+    potwierdzenie przez  osoby wymienione w ust. 1,w terminie 3 dni od złożenia oświadczenia pod rygorem
+    stwierdzenia nieważności.<br/>
+    Dla ważności oświadczeń woli innych niż majątkowe wymagane są podpisy dwóch członków Zarządu
+    wymienionych w ust. 1.<br/>
+    Zasady gospodarki majątkowej i zaciągania zobowiązań określa regulamin gospodarki finansowej
+    uchwalany przez  Zarząd Stowarzyszenia.<br/>
+    Każdy regulamin i jego zmiany muszą być zatwierdzone przez Walne Zebranie
+
+
+
 </div>
