finished statut and regulamin

--- a/pages/regulamin.html
+++ b/pages/regulamin.html
@@ -1,7 +1,7 @@
 <div class="centertext">
 
 
-    <h1>REGULAMIN STOWARZYSZENIA ZWYKŁEGO<br/>„Bądźmy Razem”</h1>
+    <h1>Regulamin Stowarzyszenia Zwykłego <br/>„Bądźmy Razem”</h1>
     <br/>
 
     <br/><strong>§1</strong><br/><br/>
