--- a/pages/statut.html
+++ b/pages/statut.html
@@ -345,4 +345,29 @@
 
 
 
+    <div class="centertext">
+        <br/><strong>Rozdział V<br/>Postanowienia Końcowe<br/>§25</strong><br/><br/>
+    </div>
+
+
+    Uchwałę w sprawie zmiany Statutu Stowarzyszenia podejmuje Walne Zebranie bezwzględną większością
+    głosów w obecności co najmniej połowy członków uprawnionych do głosowania.
+
+
+
+    <div class="centertext">
+        <br/><strong>§26</strong><br/><br/>
+    </div>
+
+    Uchwałę o rozwiązaniu Stowarzyszenia podejmuje Walne Zebranie kwalifikowaną większością 2/3
+    głosów przy obecności co najmniej 2/3 członków uprawnionych do głosowania.<br/>
+    Uchwałę o rozwiązaniu Stowarzyszenia może podjąć Walne Zebranie tylko wtedy, gdy w tym celu
+    zostało zwołane.<br/>
+    Podejmując uchwałę o rozwiązaniu lub zawieszeniu Stowarzyszenia Walne Zebranie określi sposób
+    jego likwidacji oraz przeznaczenie majątku Stowarzyszenia.<br/>
+    Statut został uchwalony w dniu 11.02.2012 roku.<br/>
+    Zmiana Statutu w dniu 28.04.2014 roku<br/>
+    Zmiana Statutu w dniu 02.06.2014 r.<br/>
+
+
 </div>
