--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,33 @@
+	<div id="2017-sarbinowo">
+		<h1>Turnus rehabilitacyjny w Sarbinowie</h1>
+		<h5>26 lipca - 09 sierpnia 2017</h5>
+
+		<div class='comment more'>
+			W dniach 26 lipca – 09 siepnia 2017 roku wzięliśmy udział w turnusie rehabilitacyjnym w ośrodku
+			„Violetta” w Sarbinowie w województwie koszalińskim niedaleko Chłopów i Mielna.
+			<br/><br/>
+			Ośrodek oddalony jest około 300 m od morza - zejścia na plażę w pełni przystosowane są dla
+			wózków inwalidzkich, a wzdłuż morza ciągnie się piękny, dwukilometrowy deptak z licznymi
+			ławeczkami dzięki czemu nasi podopieczni mogli korzystać z uroków morza nawet wtedy,
+			gdy pogoda nie sprzyjała plażowaniu i kąpielom morskim oraz oglądać przepiękne zachody
+			słońca.
+			<br/><br/>
+			Ośrodek gwarantował każdej osobie niepełnosprawnej trzy zabiegi dziennie zlecane
+			przez lekarza przez osiem dni. Nasi podopieczni korzystali z zabiegów takich jak: masaż z
+			wykorzystaniem mat masujących, aquavibron, magnetronik, okłady borowinowe,
+			naświetlanie lampą Solux, ultradźwięki, inhalacje, hydroterapia, jonoforeza i TENS.
+			Podczas naszego pobytu organizowano nam, praktycznie co drugi dzień wieczorki taneczne,
+			pieczenie kiełbasek na ognisku oraz różnorodne zajęcia dla dzieci.
+			<br/><br/>
+			Odwiedzaliśmy również indywidualnie pobliskie miejscowości m.in. Mielno, Koszalin i Chłopy,
+			gdzie wybudowano ostatnio piękne molo, niczym nie ujmujące molu w Sopocie, no
+			może trochę krótsze... a także muzeum starych samochodów niedaleko Sarbinowa.
+			<br/><br/>
+			Pogoda nam dopisała, wróciliśmy więc opaleni i szczęśliwi, czego dowodem są zdjęcia
+			umieszczone w naszej <a href="galeria_2017.sarbinowo.html">galerii</a>.
+			<br/>
+		</div>
+	</div>
 
 	<div id="2017-bal">
 		<h1>Bal w Zamku Królewskim w Niepołomicach</h1>
