mikolaj 2017 - adding text and news

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,25 @@
+
+	<div id="2017-mikolaj">
+		<h1>Mikołaj w Stowarzyszeniu "Badźmy Razem"</h1>
+		<h5>8 grudnia 2017</h5>
+
+		<div class='comment more'>
+			W piątek 8 grudnia 2017 roku przyszedł do członków naszego stowarzyszenia Mikołaj.
+			Co prawda troszkę spóźniony ale z bogatymi paczkami i przyniósł uśmiech na twarzach naszych podopiecznych.
+			Oprócz słodyczy i kosmetyków, były w nich także golarki dla chłopców i MP4 dla dziewczynek.
+			<br/><br/>
+			Jak co roku nie zawiódł nas nasz sponsor – <b>firma Wnęk z Podłęża</b> zafundowała nam bony,
+			za które mogliśmy kupić słodycze. Serdecznie Im za to dziękujemy i polecamy się na przyszły rok.
+			<br/><br/>
+			Mikołaj odbył się w Laboratorium Aktywizacji Społecznej w Niepołomicach przy ulicy Bocheńskiej.
+			Był poczęstunek dla każdego, śmiechy i rozmowy między innymi na temat przyszłorocznego wyjazdu na
+			turnus rehabilitacyjny do Sarbinowa nad morze.
+			<br/><br/>
+			Zdjęcia ze spotkania wkrótce pojawią się w naszej galerii.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2017-sarbinowo">
 		<h1>Turnus rehabilitacyjny w Sarbinowie</h1>
 		<h5>26 lipca - 09 sierpnia 2017</h5>
