--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -11,7 +11,7 @@
 			Jak co roku nie zawiódł nas nasz sponsor – <b>firma Wnęk z Podłęża</b> zafundowała nam bony,
 			za które mogliśmy kupić słodycze. Serdecznie Im za to dziękujemy i polecamy się na przyszły rok.
 			<br/><br/>
-			Mikołaj odbył się w Laboratorium Aktywizacji Społecznej w Niepołomicach przy ulicy Bocheńskiej.
+			Mikołaj odbył się w Laboratorium Aktywności Społecznej w Niepołomicach przy ulicy Bocheńskiej.
 			Był poczęstunek dla każdego, śmiechy i rozmowy między innymi na temat przyszłorocznego wyjazdu na
 			turnus rehabilitacyjny do Sarbinowa nad morze.
 			<br/><br/>
