--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-        <h1>O nas</h1>
+        <h1>O Stowarzyszeniu „Bądźmy Razem”</h1>
         <p>W marcu 2012 roku w Niepołomicach zostało założone Stowarzyszenie o nazwie "Stowarzyszenie Rodzin i Przyjaciół Osób z rozszczepem kręgosłupa i głęboką lub sprzężoną niepełnosprawnością „Bądźmy Razem”. Działalność Stowarzyszenia opiera się na pracy społecznej członków.</p>
 
         <iframe width="440" height="300" src="https://www.youtube.com/embed/G_q3YhanHm0" frameborder="0" allowfullscreen>
