--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,6 +1,6 @@
 
 	<div id="2017-mikolaj">
-		<h1>Mikołaj w Stowarzyszeniu "Bądźmy Razem"</h1>
+		<h1>Mikołaj w Stowarzyszeniu „Bądźmy Razem"</h1>
 		<h5>8 grudnia 2017</h5>
 
 		<div class='comment more'>
