--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -15,7 +15,7 @@
 			Był poczęstunek dla każdego, śmiechy i rozmowy między innymi na temat przyszłorocznego wyjazdu na
 			turnus rehabilitacyjny do Sarbinowa nad morze.
 			<br/><br/>
-			Zdjęcia ze spotkania wkrótce pojawią się w naszej galerii.
+			Zdjęcia ze spotkania znajdują się w naszej <a href="galeria_2017.z.mikolaj.html">galerii</a>.
 			<br/>
 		</div>
 	</div>
