adding 2018-bal-karnawalowy

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,21 @@
+	<div id="2018-bal-karnawalowy">
+		<h1>Bal Karnawałowy</h1>
+		<h5>7 luty 2018</h5>
+
+		<div class='comment more'>
+			We środę 7 lutego 2018 roku, wzorem poprzednich lat braliśmy udział w Balu Karnawałowym na Zamku Królewskim
+			w Niepołomicach organizowanym przez Burmistrza Miasta i Gminy Niepołomice.
+			Jak co roku bal obsługiwała restauracja "Zamek". Był pyszny poczęstunek i przednia zabawa
+			przy zespole muzycznym. Frekwencja była bardzo duża.
+			<br/><br/>
+			Obecni byli podopieczni TPS-ów, DŚ oraz Stowarzyszeń z Gminy Niepołomice i nie tylko.
+			Spędziliśmy miło czas na pogawędkach i tańcach a integracja ludzi zdrowych
+			z niepełnosprawnymi była pełna.
+			<br/><!--br/>
+			Zdjęcia ze spotkania znajdują się w naszej <a href="galeria_2018.karnawal.html">galerii</a>.
+			<br/-->
+		</div>
+	</div>
 
 	<div id="2017-mikolaj">
 		<h1>Mikołaj w Stowarzyszeniu „Bądźmy Razem"</h1>
