adding 2018-bal-karnawalowy PICS

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -11,9 +11,9 @@
 			Obecni byli podopieczni TPS-ów, DŚ oraz Stowarzyszeń z Gminy Niepołomice i nie tylko.
 			Spędziliśmy miło czas na pogawędkach i tańcach a integracja ludzi zdrowych
 			z niepełnosprawnymi była pełna.
-			<br/><!--br/>
-			Zdjęcia ze spotkania znajdują się w naszej <a href="galeria_2018.karnawal.html">galerii</a>.
-			<br/-->
+			<br/><br/>
+			Zdjęcia z tego spotkania znajdują się w naszej <a href="galeria_2018.bal.karnawalowy.html">galerii</a>.
+			<br/>
 		</div>
 	</div>
 
