--- a/pages/sprawozdania.html
+++ b/pages/sprawozdania.html
@@ -1,6 +1,26 @@
 <div class="centertable">
     <table><tr><td>
 
+            <h1>Podsumowanie 2017 r.</h1>
+
+            <a href="docs/2017/sprawozdanie merytoryczne 2017.jpeg">Sprawozdanie merytoryczne</a>
+            <br/>
+            <a href="docs/2017/sprawozdanie komisji rewizyjnej 2017.jpeg">Sprawozdanie komicji rewizyjnej</a>
+            <br/>
+            <a href="docs/2017/bilans 2017.jpeg">Bilans</a>
+            <br/>
+            <a href="docs/2017/rachunek ZIS 2017.jpeg">Rachunek zysków i strat</a>
+            <br/>
+            <a href="docs/2017/inf o spr finansowym 1 2017.jpeg">Informacje ogólne</a>
+            <br/>
+            <a href="docs/2017/inf o spr finansowym 2 2017.jpeg">Informacje ogólne (strona 2)</a>
+            <br/>
+            <a href="docs/2017/inf dodatkowe do bilansu 1 2017.jpeg">Informacje uzupełniające</a>
+            <br/>
+            <a href="docs/2017/inf dodatkowe do bilansu 2 2017.jpeg">Informacje uzupełniające (strona 2)</a>
+            <br/>
+            <br/>
+
             <h1>Podsumowanie 2016 r.</h1>
 
             <a href="docs/2016/sprawozdanie merytoryczne 2016.pdf">Sprawozdanie merytoryczne</a>
