adding walne zebranie 2018

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,20 @@
+	<div id="2018-walne-zebranie">
+		<h1>Walne Zebranie Stowarzyszenia "Bądźmy Razem"</h1>
+		<h5>17 marzec 2018</h5>
+
+		<div class='comment more'>
+			W sobotę 17 marca 2018 roku w Laboratorium Aktywności Społecznej odbyło się Walne Zebranie
+			Stowarzyszenia "Bądźmy Razem", na którym podsumowaliśmy piąty rok naszej działalności - 2017.
+			<br/><br/>
+			Podjęliśmy pięć uchwał, a Zarząd uzyskał absolutorium. Stosowne dokumenty opublikowane są na
+			naszej stronie internetowej w zakładce <a href="sprawozdania.html">sprawozdania</a>.
+			Na zebraniu zdecydowaliśmy również o wyjeździe do Oceanarium we
+			Wrocławiu w pierwszy weekend lipca. Wyjazd ten przynajmniej w większej części chcemy aby był
+			finansowany z funduszy Stowarzyszenia.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2018-bal-karnawalowy">
 		<h1>Bal Karnawałowy</h1>
 		<h5>7 luty 2018</h5>
