--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,22 @@
+	<div id="2018-murzasichle">
+		<h1>Murzasichle</h1>
+		<h5>29 czerwiec 2018</h5>
+
+		<div class='comment more'>
+			Pod koniec czerwca wyjechaliśmy na weekend do Murzasichle do hotelu Giewont w ramach spotkań
+			integracyjnych Stowarzyszenia. Mimo iż pogoda nam nie dopisała spędziliśmy tam miło czas.
+			Byl grill z pieczonymi oscypkami i pysznym wieprzowym udźcem na którym obchodziliśmy 20 rocznicę
+			ślubu jednej z par małżeńskich naszych członków. Korzystaliśmy również z basenu.
+			<br/><br/>
+			Niestety musimy stwierdzić,
+			że pomimo pysznego jedzenia hotel nie do końca spełnia warunki na pobyt w nim osób niepełnosprawnych.
+			Koszt pobytu finansowalo Stowarzyszenie z funduszy własnych.
+			<br/><br/>
+			Zdjęcia z tego wyjazdu znajdują się w naszej <a href="galeria_2018.murzasichle.html">galerii</a>.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2018-walne-zebranie">
 		<h1>Walne Zebranie Stowarzyszenia "Bądźmy Razem"</h1>
 		<h5>17 marzec 2018</h5>
