--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,46 @@
+	<div id="2018-sarbinowo">
+		<h1>Turnus w Sarbinowie</h1>
+		<h5>lipiec 2018</h5>
+
+		<div class='comment more'>
+			W lipcu 2018, jak co roku wybraliśmy się wraz z członkami Stowarzyszenia "Bądźmy Razem"
+			na dwutygodniowy turnus rehabilitacyjny do Sarbinowa nad morzem. Turnus liczył 29 osób.
+			Wyjątkowo dopisała nam w tym roku pogoda. Przez dwa tygodnie plażowaliśmy przy średnich temperaturach
+			powietrza 30° C oraz kąpaliśmy się w Bałtyku, gdzie woda dochodziła nawet do 25° C.
+			Ośrodek "Violetta", w którym byliśmy jest w pełni przystosowany dla osób niepełnosprawnych z
+			windą i podjazdami, z rehabilitacją i stołówką (śniadania i kolacje, ogromny szwedzki stół, a obiad
+			porcjowany). Ośrodek położony jest ok. 150 m od morza. Miejsce jest o tyle świetne, że wzdłuż
+			morza ciągnie się nowo wyremontowany, dwukilometrowy deptak ze zjazdami na plażę
+			przystosowanymi dla wózków, po którym mogliśmy godzinami spacerować.
+			<br/><br/>
+			Osoby z orzeczeniami o niepełnosprawności przez osiem dni w ciągu turnusu korzystały z trzech
+			zabiegów dziennie (okłady borowinowe, kąpiele siarkowe i borowinowe, hydromasaże, krioterapia,
+			masaż Aquawibron,
+			inhalacje, tertensiw, diadynamic). Mogliśmy również korzystać z sali gimnastycznej z profesjonalnym
+			sprzętem na siłownie, świetlicy z bufetem i sprzętem grającym, grilowni i miejscem na ognisko, a
+			dzieci z placu zabaw mieszczącym się przed budynkiem. Podczas turnusu zwiedziliśmy ogrody
+			tematyczne Hortulus w Dobrzycy. Ogrody te to blisko 30 różnych oddzielnych ogrodów
+			tematycznych. Są wśród nich zarówno związane z rodzajem środowiska - m. in. ogród skalny, ogród
+			leśny, jak i te w których dominuje architektura i styl związany ze sztuką i kulturą narodową, jak np.
+			ogród japoński, francuski, angielski czy śródziemnomorski. Na terenie ogrodów znajduje się też wieża
+			widokowa, z której można w całości oglądać te przepiękne obiekty.
+			<br/><br/>
+			Byliśmy również z wycieczką w Mielnie, gdzie pływaliśmy po jeziorze Jamno wodnym tramwajem "Koszałek" oraz poznawaliśmy
+			historię i gatunki niektórych nigdzie niespotykanych ryb jak i same, jeszcze do nie dawna nie
+			zamieszkane okolice nad brzegiem jeziora. W trakcie turnusu odwiedziliśmy Gąski, gdzie odbywał się
+			II Festiwal "Gęsi". Zasmakowaliśmy tam smakołyków z gęsiny i zwiedziliśmy latarnię morską
+			(oczywiście, kto mógł). Właściciele ośrodka zorganizowali nam ognisko z pieczeniem kiełbasek, dwa
+			wieczorki taneczne oraz koncert piosenek z lat 20 - tych i rosyjskich i cygańskich romansów.
+			Spędziliśmy miło dwa tygodnie i będzie co wspominać. Turnus częściowo finansowany był z Granta
+			(7000 zł) przyznanego przez Burmistrza miasta i gminy Niepołomice, za który dziękujemy, częściowo z funduszy
+			własnych Stowarzyszenia (po 500 zł dla każdego niepełnosprawnego członka), a pozostała kwota to
+			wkład własny.
+			<br/><br/>
+			Zdjęcia z turnusu znajdują się w <a href="galeria_2018.sarbinowo.html">Galerii Stowarzyszenia</a>.
+			<br/>
+		</div>
+	</div>
+
 	<div id="2018-murzasichle">
 		<h1>Murzasichle</h1>
 		<h5>29 czerwiec 2018</h5>
