2018 dziekujemy za 1% podatku

--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,3 +1,17 @@
+
+
+    <div id="2018-jeden-procent">
+		<h1>Dziękujemy za <img width=27px height=17px src="style/images/jeden-procent.png" /> podatku !</h1>
+		<h5>7 pażdziernik 2018</h5>
+
+		<div class='comment more'>
+			Serdecznie dziękujemy wszystkim którzy zechcieli nam odpisać 1% z podatku.
+			Dzięki temu nasi podopieczni mogli ponownie wyjechać na turnus rehabilitacyjny
+			nad morze do Sarbinowa. Prosimy nie zapominać o nas w przyszłym roku. Dziękujemy!
+			<br/>
+		</div>
+	</div>
+
 	<div id="2018-sarbinowo">
 		<h1>Turnus w Sarbinowie</h1>
 		<h5>lipiec 2018</h5>
