zmiana nazwiska Moni

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@
           <tr><td>prezes 		</td><td>Małgorzata Maciejek</td></tr>
           <tr><td>v-ce prezes	</td><td>Bogusław Madej</td></tr>
           <tr><td>skarbnik		</td><td>Joanna Drabik</td></tr>
-          <tr><td>sekretarz		</td><td>Monika Maciejek</td></tr>
+          <tr><td>sekretarz		</td><td>Monika Makyła</td></tr>
           <tr><td>członek		</td><td>Artur Gawłowicz</td></tr>
         </table>
 
