--- a/pages/regulamin.html
+++ b/pages/regulamin.html
@@ -27,7 +27,7 @@
         <br/><br/>
         Prezes - Małgorzata Maciejek<br/>
         V-ce prezes - Bogusław Madej<br/>
-        Sekretarz - Monika Maciejek<br/>
+        Sekretarz - Monika Makyła<br/>
         Skarbnik - Joanna Drabik<br/>
         Członek - Artur Gawłowicz<br/>
         <br/>
