--- a/pages/aktualnosci.html
+++ b/pages/aktualnosci.html
@@ -1,6 +1,20 @@
+	<div id="2019-szkolenie-int-sens">
+		<h1>Szkolenie</h1>
+		<h5>18 grudnia 2018</h5>
+
+		<div class='comment more'>
+			W dniu 18 grudnia 2018 roku odbyło się szkolenie dla członków Stowarzyszenia
+			"Bądźmy Razem" nt: Zaburzeń czucia głębokiego i powierzchownego w kontekście założeń Metody Integracji
+			Sensorycznej według Jean Ayres. Szkolenie poprowadziła p. Agnieszka Bochenek - oligofrenik i
+			pedagog Szkoły Specjalnej w Wieliczce. <br/>
+			Prosimy, jeżeli Państwo zechcecie zapoznać się z poniższym, bardzo ciekawym materiałem
+			na ten temat: <a href="docs/2019/szkolenie integracja sensoryczna.docx">szkolenie integracja sensoryczna.docx</a>
+			<br/>
+		</div>
+	</div>
 
 
-    <div id="2018-jeden-procent">
+	<div id="2018-jeden-procent">
 		<h1>Dziękujemy za <img width=27px height=17px src="style/images/jeden-procent.png" /> podatku !</h1>
 		<h5>7 pażdziernik 2018</h5>
 
